단축키로 파일 복사되도록 추가

--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
           "group": "navigation"
         }
       ]
-    }
+    },
+    "keybindings": [
+      {
+        "command": "copy-with-filename.copy-with-filename",
+        "key": "ctrl+alt+c",
+        "when": "editorTextFocus"
+      }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "yarn run compile",
