--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.3.9",
     "eslint": "^8.57.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vsce": "^2.15.0"
   },
   "repository": "https://github.com/ohy9205/vscode-extension.git",
   "license": "MIT"
